--- a/contents/css/header.css
+++ b/contents/css/header.css
@@ -1,9 +1,8 @@
 header {
     height: var(--header-navbar-height);
-    padding: 0 1.75rem;
     position: relative;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     background: var(--color-dark);
 }
@@ -15,6 +14,11 @@ header a:visited {
 header > nav {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
+    padding: 0 1.75rem;
+    width: 100%;
+    max-width: 1755px;
+    margin: auto;
 }
 
 header > nav > .nav-item {
