--- a/contents/css/global.css
+++ b/contents/css/global.css
@@ -20,8 +20,8 @@
 }
 
 * {
-    font-family: var(--font-display);
-    font-size: 14px;
+    font-family: 'Noto Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    font-size: 16px;
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-weight: 400;
@@ -42,7 +42,6 @@ h6 {
 h5 {
     font-size: 1.5em;
     letter-spacing: 0.15px;
-    font-family: var(--font-caption);
 }
 
 h4 {
@@ -73,120 +72,36 @@ h5,
 h6 {
     margin-top: 1.25rem;
     margin-bottom: .75rem;
+    font-family: 'Heebo', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body {
-    background-color: var(--color--active);
+dt {
+    font-family: 'Heebo', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-main {
-    max-width: 1755px;
-    margin: auto;
-    /* padding: 1.25rem 1.75rem; */
+#about-me > #photo {
+    background-image: url('./../../assets/images/1466883288994.jpg');
+    width: 245px;
+    height: 245px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    box-shadow: -6px 6px 0px 0px rgba(253,61,56,0.2);
 }
 
-a {
-    text-decoration: none;
-    cursor: pointer;
-    display: inline-flex;
-    align-items: center;
-}
-
-ul {
-    list-style-type: none;
-}
-
-button {
-    cursor: pointer;
-    text-transform: uppercase;
-    height: 36px;
-    display: inline-flex;
-    padding: 0 16px;
-    border-radius: 4px;
-    font-size: .875rem;
-    font-weight: 500;
-    letter-spacing: .0892857143em;
-    line-height: 2.25rem;
-    outline: none;
-    border: none;
-    background-color: var(--color-cyber-grape-1);
+#bio {
+    background: rgb(253,97,85);
+    background: linear-gradient(114deg, rgba(253,97,85,1) 0%, rgba(253,99,87,1) 25%, rgba(253,105,94,1) 52%, rgba(253,128,118,1) 82%, rgba(253,144,135,1) 100%, rgba(254,186,180,1) 100%, rgba(255,255,255,1) 100%);
     color: var(--color-white);
 }
 
-.text-theme {
-    color: var(--color-theme);
+#description-body {
+    text-align: justify;
+    max-width: 520px;
 }
 
-.text-align-center {
-    text-align: center;
-}
-
-.bg-theme {
-    background-color: var(--color-theme);
-}
-
-.rounded {
-    border-radius: 50%;
-    overflow: hidden;
-    width: 230px;
-    height: 230px;
-    position: relative;
-    box-shadow: 0px 2px 8px 3px #33333340;
-}
-
-.rounded > img {
-    margin-top: -55px;
-    margin-left: 0px;
-    -webkit-user-drag: none;
-}
-
-.rectangle {
-    background-image: url('../../assets/images/1466883288994.jpg');
-    background-position: center;
-    background-size: cover;
-    background-position: top center;
-    width: 330px;
-    height: 330px;
-    position: relative;
-}
-
-.rectangle > img {
-    margin-top: -50px;
-    margin-left: -15px;
-}
-
-div#content > article {
-    padding: 1.25rem 1.75rem;
-    min-height: 400px;
-}
-
-div#content > article#profile {
-    max-height: 1080px;
-    height: 100vh;
-}
-
-article#profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-article#profile > #about-me{
-    max-width: 600px;
-}
-
-article#profile > #photo {
-    margin: 1.5rem;
-}
-
-#photo > .rectangle::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 10px;
-    right: -10px;
-    z-index: -1;
-    border: 2px solid var(--color-theme);
+.highlight{
+    color: rgb(253,97,85);
+    font-weight: 700;
+    font-size: inherit;
 }
