--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,68 @@
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../../node_modules/bootstrap/scss/bootstrap-grid";
+@import "../../node_modules/bootstrap/scss/bootstrap-utilities";
+@import "../../node_modules/bootstrap/scss/forms";
+@import "../../node_modules/bootstrap/scss/buttons";
+@import "../../node_modules/bootstrap/scss/card";
+@import "../../node_modules/bootstrap/scss/root";
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-family: 'Noto Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    scroll-behavior: smooth;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+}
+
+h6 {
+    font-size: 1.25em;
+    letter-spacing: 0.15px;
+}
+
+h5 {
+    font-size: 1.5em;
+    letter-spacing: 0.15px;
+}
+
+h4 {
+    font-size: 2.15em;
+    letter-spacing: 0.25px;
+}
+
+h3 {
+    font-size: 3em;
+    letter-spacing: 0;
+}
+
+h2 {
+    font-size: 3.75em;
+    letter-spacing: -.5px;
+}
+
+h1 {
+    font-size: 6em;
+    letter-spacing: -1.5px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 1.25rem;
+    margin-bottom: .75rem;
+    font-family: 'Heebo', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+form#temperature-converter-form input[type=number]+select {
+    background-color: var(--bs-gray-200);
+    font-weight: 600;
+}
+
+
+form#temperature-converter-form input[type=number]+select > option {
+    background-color: var(--bs-white);
 }
